fix test vector api visibility